Maven: removes --illegal-access=deny flag because it's been removed and throws a warning